<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.math.WelcomeFragment"
        android:label="@string/welcome_nav_title_label"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.example.math.LoseFragment"
        android:label="@string/lose_nav_label"
        tools:layout="@layout/fragment_lose" >
        <action
            android:id="@+id/action_loseFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.math.QuestionFragment"
        android:label="@string/question_nav_label"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.example.math.WinFragment"
        android:label="@string/win_nav_label"
        tools:layout="@layout/fragment_win" >
        <action
            android:id="@+id/action_winFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
</navigation>